# servermonkey

./: .gitignore  .mcp.json.example  LICENSE  README.md  config.toml.example  pyproject.toml
docs/system-cards/: EXAMPLE-ct-template.md
scripts/: bootstrap-ubuntu.sh  check-network.sh
scripts/apps/czkawka/: install-czkawka.sh
scripts/apps/forgejo/: README.md  forgejo-install.sh  forgejo-move-repos.sh
scripts/apps/matrix/: README.md  install-matrix.sh  install-robot-bot.sh  install-shuri-bot.sh
scripts/apps/readeck/: install-readeck.sh
scripts/apps/vecdb/: install-vecdb.sh
scripts/apps/wiki/: install-kiwix.sh  install-wiki.sh  install-wikijs.sh
scripts/runpod/: model-report.md  model-selection-prompt.md  rpctl.py
scripts/runpod/boot/: boot.sh  common.sh  session-end.sh
scripts/runpod/boot/overlays/: redteam.sh
scripts/runpod/boot/overlays/redteam/: agent.py  system-prompt-executor.md  system-prompt-planner.md
scripts/runpod/boot/overlays/redteam/prompts/: cloud.md  exploit-dev.md  lateral-movement.md  malware.md  network.md  privesc.md  recon.md  social-engineering.md  web-app.md
scripts/runpod/boot/templates/: heavy.sh  quick.sh  research.sh
servermonkey/: __init__.py  __main__.py  audit.py  client.py  config.py  credentials.py  guardrails.py  server.py  setup.py
skill/: SKILL.md
skill/Workflows/: Maintenance.md  ProvisionVM.md  StatusCheck.md
tests/: conftest.py  test_audit.py  test_config.py  test_credentials.py  test_functional.py  test_guardrails.py  test_server.py  test_setup.py
